--- a/index.html
+++ b/index.html
@@ -157,6 +157,19 @@
       </div>
     </section>
 
-  <script src="/js/main.js"></script>
+  <script>
+   const mobileBtn = document.getElementById('mobile-cta')
+nav = document.querySelector('nav')
+mobileBtnExit = document.getElementById('mobile-exit-cta');
+
+mobileBtn.addEventListener('click', ()=>{
+    nav.classList.add('menu-btn');
+});
+
+mobileBtnExit.addEventListener('click', ()=>{
+    nav.classList.remove('menu-btn');
+});
+ 
+   </script>
   </body>
 </html>
