--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend By Gary Simon</title>
+    <link rel="favicon" href="/icon/checkmark.svg" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
