--- a/index.html
+++ b/index.html
@@ -158,6 +158,19 @@
       </div>
     </section>
 
-  <script src="/js/main.js"></script>
+  <script>
+  const mobileBtn = document.getElementById('mobile-cta')
+const nav = document.querySelector('nav')
+const mobileBtnExit = document.getElementById('mobile-exit-cta');
+
+mobileBtn.addEventListener('click', ()=>{
+    nav.classList.add('menu-btn');
+});
+
+mobileBtnExit.addEventListener('click', ()=>{
+    nav.classList.remove('menu-btn');
+});
+  
+  </script>
   </body>
 </html>
