--- a/index.html
+++ b/index.html
@@ -157,19 +157,6 @@
         </div>
       </div>
     </section>
-
-  <script>
-    const mobileBtn = document.getElementById('mobile-cta')
-    const nav = document.querySelector('nav')
-    const mobileBtnExit = document.getElementById('mobile-exit-cta');
-
-    mobileBtn.addEventListener('click', ()=>{
-      nav.classList.add('menu-btn');
-    });
-
-    mobileBtnExit.addEventListener('click', ()=>{
-        nav.classList.remove('menu-btn');
-    });
-  </script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
