--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend By Gary Simon</title>
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="shortcut icon" href="/icon/checkmark.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/icon/checkmark.png" type="icon">
   </head>
   <body>
     <div class="navbar">
