--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend By Gary Simon</title>
-    <link rel="stylesheet" href="css/main.css" />
-    
+    <link rel="stylesheet" href="css/main.css" /> 
   </head>
   <body>
     <div class="navbar">
@@ -157,6 +156,7 @@
         </div>
       </div>
     </section>
-    <script src="/js/main.js"></script>
+    <script src="/js/main.js">
+    </script>
   </body>
 </html>
