--- a/index.html
+++ b/index.html
@@ -156,7 +156,6 @@
         </div>
       </div>
     </section>
-    <script src="/js/main.js">
-    </script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
